<resources>
    <string name="app_name">AndroBoum</string>
    <string name="title">Une appli qui explose!</string>
    <string name="title2">Badaboum!</string>
    <string name="descri_imageacc">bomberman</string>
    <string name="demarbouton">DEMARRER</string>
    <string name="auteur">\@Tixier_Yann</string>
    <string name="action_logout">Deconnexion</string>
    <string name="action_settings">Option</string>

    <string name="facebook_application_id" translatable="false">1809914232370472</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1809914232370472</string>
    <string name="profil_icon">Votre image de profil</string>
    <string name="mail">Email</string>
    <string name="imageUploaded">Image téléchargée</string>
    <string name="List_users">Liste des utilisateurs</string>
    <string name="profil_mail">themail</string>
    <string name="miniAvatar_descri">Mini Avatar du profil</string>
    <string name="connecticon_descrip">Connecté</string>
</resources>
